--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -30,7 +30,7 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID DATA 6.9.20.xlsx"), 
+   read_xlsx(paste0(input_path, "COVID data 6.15.20.xlsx"), 
              range = "C2:AA500", 
                         col_names = c("case_id", "age", "gender", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
@@ -55,7 +55,7 @@ covid_data_initial <-
 
 ```{r}
 covid_clean <- covid_data_initial %>% 
-   filter(!is.na(case_id)) %>% 
+   filter(!is.na(age)) %>% 
    mutate(age = as.numeric(age),
           age_group = cut(age, breaks = c(0, 10, 20, 30, 40, 50, 60, 70, 80, 110),
                           labels = c("0 to 9, 0.1", "10 to 19, 0.12", "20 to 29, 0.19", 
